# WebPlayer

./: .gitignore  config.py  database.py  docker-compose.yml  main.py  nginx-config.conf  pyproject.toml  requirements.txt
app/: .env  main.py
app/api/v1/: endpoints.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/repositories/: user_repository.py
app/schemas/: pydantic_schema.py
app/services/: user_services.py
app/utils/: hash_password.py  jwt_token.py
auth/: __init__.py  models.py  register.py  schemas.py  tasks.py  utils.py
auth/keys/: jwt-private.pem  jwt-public.pem
auth_service/: .env-example  .env-non-dev  .env-non-dev-example  Dockerfile  alembic.ini  requirements.txt
auth_service/app/: main.py
auth_service/app/api/: api_.py
auth_service/app/core/: config.py  security.py
auth_service/app/db/: models.py  session.py
auth_service/app/repositories/: user_repository.py
auth_service/app/schemas/: pydantic_schema.py
auth_service/app/services/: user_services.py
auth_service/app/utils/: hash_password.py  jwt_token.py
env/: pyvenv.cfg
migrations/versions/: 35d9ceb3c27f_.py  3c7be641a393_.py  66a7776a3485_.py
music_service/: .env-example  .env-non-dev  .env-non-dev-example  Dockerfile  requirements.txt
music_service/app/: main.py
music_service/app/api/: api_.py
music_service/app/core/: config.py  security.py
music_service/app/db/: models.py  session.py
music_service/app/migrations/: env.py
music_service/app/repositories/: music_repository.py
music_service/app/schemas/: pydantic_schemas.py
music_service/app/services/: music_service.py
templates/: home.html  login.html  package-lock.json  register.html
templates/css/: home.css  popup.css
templates/js/: home.js  login.js  popup.js  script.js
web-player/: package-lock.json  package.json
web-player/src/: App.jsx  api.js  index.css
(+51 files in other folders)
